# code-complexity-comparator

./: Cargo.toml  README.md
crates/complexity-analyzer/: Cargo.toml
crates/complexity-analyzer/src/: lib.rs  walker.rs
crates/complexity-cli/: Cargo.toml
crates/complexity-cli/src/: main.rs
crates/complexity-compare/: Cargo.toml
crates/complexity-compare/src/: constants_diff.rs  deviation.rs  lib.rs  matching.rs  sort.rs
crates/complexity-core/: Cargo.toml
crates/complexity-lang-c/: Cargo.toml
crates/complexity-lang-c/src/: lib.rs
crates/complexity-lang-rust/: Cargo.toml
crates/complexity-lang-rust/src/: lib.rs
crates/complexity-predict/: Cargo.toml
crates/complexity-predict/src/: heuristics.rs  lib.rs
src/: analyzer.rs  core.rs  lang_c.rs  lang_fortran.rs  lang_java.rs  lang_perl.rs  lang_python.rs  lang_r.rs  lang_rust.rs  lib.rs  main.rs  order.rs  walker.rs
src/compare/: call_graph.rs  constants_diff.rs  deviation.rs  matching.rs  mod.rs  sort.rs  structs.rs  upstream.rs
src/predict/: heuristics.rs  mod.rs
src/tui/: highlight.rs  mod.rs  pairs.rs  render.rs
tests/fixtures/c/: sample.c  sample.cpp
tests/fixtures/fortran/: sample.f90
tests/fixtures/perl/: sample.pl
tests/fixtures/py/: sample.py
tests/fixtures/r/: sample.R
tests/fixtures/rust/: sample.rs
