[workspace]
resolver = "2"
members = [
    "crates/complexity-core",
    "crates/complexity-analyzer",
    "crates/complexity-lang-c",
    "crates/complexity-lang-rust",
    "crates/complexity-compare",
    "crates/complexity-predict",
    "crates/complexity-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Johan Henriksson"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
regex = "1"
tree-sitter = "0.22"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.22"
tree-sitter-rust = "0.21"
once_cell = "1"
nalgebra = "0.33"
toml = "0.8"

complexity-core = { path = "crates/complexity-core" }
complexity-analyzer = { path = "crates/complexity-analyzer" }
complexity-lang-c = { path = "crates/complexity-lang-c" }
complexity-lang-rust = { path = "crates/complexity-lang-rust" }
complexity-compare = { path = "crates/complexity-compare" }
complexity-predict = { path = "crates/complexity-predict" }

[profile.release]
lto = "thin"
