[package]
name = "complexity"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Johan Henriksson"]

[lib]
name = "complexity"
path = "src/lib.rs"

[[bin]]
name = "complexity"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
regex = "1"
tree-sitter = "0.22"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.22"
tree-sitter-rust = "0.21"
once_cell = "1"
nalgebra = "0.33"
toml = "0.8"

[profile.release]
lto = "thin"
