[package]
name = "code-complexity-comparator-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Johan Henriksson"]

[lib]
name = "code_complexity_comparator_rs"
path = "src/lib.rs"

[[bin]]
name = "ccc-rs"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
regex = "1"
tree-sitter = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"
tree-sitter-python = "0.23"
tree-sitter-r = "1.2"
once_cell = "1"
nalgebra = "0.33"
toml = "0.8"
tree-sitter-perl-next = "0.1.0"
tree-sitter-fortran = "0.5.1"
ratatui = "0.29"
crossterm = "0.28"

[profile.release]
lto = "thin"
