[package]
name = "complexity-compare"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
complexity-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
