[package]
name = "complexity-lang-rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
complexity-core = { workspace = true }
complexity-analyzer = { workspace = true }
anyhow = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
